# modal-service

./: .env.tpl  .gitignore  CLAUDE.md  README.md  app.py  justfile  pyproject.toml
.github/workflows/: deploy.yml
scripts/: sync_secrets.py
src/core/: config.py  pipeline.py
tests/: test_pipeline.py
